--- a/docs/griffon-mail-guide/src/docs/asciidoc/index.adoc
+++ b/docs/griffon-mail-guide/src/docs/asciidoc/index.adoc
@@ -1,7 +1,8 @@
 = {project-title}
 :author: {project-author}
 :revnumber: {project-version}
-:toclevels: 10
+:toclevels: 3
+:docinfo1:
 
 include::_links.adoc[]
 
